plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.0'
	id 'io.spring.dependency-management' version '1.1.7'
	id "com.diffplug.spotless" version "6.25.0"
}

group = 'com.asdf'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// Swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// JUnit 5
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

// 테스트 구성
tasks.named('test') {
	useJUnitPlatform()

	// 테스트 실행 시 상세한 결과 출력
	testLogging {
		// 어떤 것을 로그로 출력할지
		events "passed", "skipped", "failed"
		// 테스트 케이스 별 항상 결과를 출력하도록
		outputs.upToDateWhen { false }
		jvmArgs '-XX:+EnableDynamicAgentLoading'
	}
}

spotless {
	java {
		// google java 포맷팅 설정
		googleJavaFormat('1.22.0').aosp().reflowLongStrings()
	}
}

// 빌드 전 자동으로 코드 양식 맞춤
build.dependsOn 'spotlessApply'
